--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "https://s3-us-west-2.amazonaws.com/",
   "dependencies": {
+    "@material-ui/core": "^1.3.1",
     "lodash": "^4.17.10",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
