--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "proxy": "https://s3-us-west-2.amazonaws.com/",
   "dependencies": {
-    "@material-ui/core": "^1.3.1",
+    "bootstrap": "^4.2.1",
+    "jquery": "1.9.1",
     "lodash": "^4.17.10",
+    "popper.js": "^1.14.3",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "reactstrap": "^7.0.2",
     "request": "^2.87.0"
   },
   "devDependencies": {
