--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "jquery": "1.9.1",
     "lodash": "^4.17.10",
     "popper.js": "^1.14.3",
-    "react": "16.7.0-alpha",
-    "react-dom": "^16.4.1",
+    "react": "16.8.0-alpha",
+    "react-dom": "16.8.0-alpha",
     "reactn": "^0.1.9",
     "reactstrap": "^7.0.2",
     "request": "^2.87.0"
