--- a/package.json
+++ b/package.json
@@ -15,12 +15,21 @@
     "request": "^2.87.0"
   },
   "devDependencies": {
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-json": "^1.2.1",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react-hooks": "^0.0.0",
     "react-scripts": "2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom"
+    "test": "CI=true react-scripts test --env=jsdom --colors",
+    "lint": "eslint ./src/**/*.js*",
+    "validate": "yarn lint && yarn test"
   },
   "browserslist": [
     ">0.2%",
