--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
     "eslint-plugin-react-hooks": "^0.0.0",
+    "husky": "^1.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
